test_programs/compile_failure/comptime_leak_private_dependency_type/mylib/src/lib.nr
mod hidden {
    pub struct Secret {
        pub value: Field,
    }
}

pub struct PublicBox {
    secret: hidden::Secret,
}

pub fn anchor() -> Field {
    0
}
